--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -6,71 +6,68 @@
 @model TaskManagementSystem.ViewModels.LoginViewModel
 
 <div class="row justify-content-center">
-    <div class="card mt-5">
-        <div class="card-body">
-            <h1 class="h3 mb-3 fw-normal text-center">Please sign in</h1>
-            <form asp-action="Login">
-                <div class="form-floating">
-                    <input asp-for="Username" type="text" class="form-control" id="floatingInput"
-                           placeholder="Username">
-                    <label asp-for="Username" for="floatingInput">Username</label>
-                    <span asp-validation-for="Username" class="text-danger"></span>
-                </div>
-                <div class="form-floating">
-                    <input asp-for="Password" type="password" class="form-control" id="floatingPassword"
-                           placeholder="Password">
-                    <label asp-for="Password" for="floatingPassword">Password</label>
-                    <span asp-validation-for="Password" class="text-danger"></span>
-                </div>
-                <div class="form-check text-start my-3">
-                    <input asp-for="RememberMe" class="form-check-input" type="checkbox" id="flexCheckDefault">
-                    <label asp-for="RememberMe" class="form-check-label" for="flexCheckDefault">
-                        Remember me
-                    </label>
-                </div>
-                <button class="btn btn-primary w-100 py-2" type="submit">Login</button>
-            </form>
-
-            @if (!ViewData.ModelState.IsValid)
-            {
-                <div class="alert alert-danger" role="alert">
-                    <strong>Error:</strong> There was a problem with your profile save.
-                    <ul>
-                        @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
-                        {
-                            <li>@error.ErrorMessage</li>
-                        }
-                    </ul>
-                </div>
-            }
-
-            <div class="mt-3 text-center">
-                @{
-                    if (Model.ExternalLogins?.Count == 0)
-                    {
-                        <div>No external logins configured</div>
-                    }
-                    else
-                    {
-                        <form method="post" asp-action="ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl">
-                            <div>
-                                @foreach (var provider in Model.ExternalLogins)
-                                {
-                                    <button class="btn btn-secondary mx-1" type="submit" name="provider" value="@provider.Name"
-                                            title="Log in using your @provider.DisplayName account">
-
-                                        <i class="bi bi-google"></i>
-                                    </button>
-
-                                    <a asp-controller="Account" asp-action="Register" class="btn btn-secondary mx-1">Register</a>
-                                }
-                            </div>
-                        </form>
-                    }
-                }
+    <h1 class="h3 mb-3 fw-normal text-center">Welcome back</h1>
+    <form asp-action="Login">
+        <div class="form-floating mb-3">
+            <input asp-for="Username" type="text" class="form-control" id="floatingInput"
+                    placeholder="Username">
+            <label asp-for="Username" for="floatingInput">Username</label>
+            <span asp-validation-for="Username" class="text-danger"></span>
+        </div>
+        <div class="form-floating mb-3">
+            <input asp-for="Password" type="password" class="form-control" id="floatingPassword"
+                    placeholder="Password">
+            <label asp-for="Password" for="floatingPassword">Password</label>
+            <span asp-validation-for="Password" class="text-danger"></span>
+        </div>
+        <div  class="container text-center">
+            <div class="row">
+                <h6 class="h6 mb-3 fw-normal text-center col"> Don't have an account? </h6>
+                <button class="h6 btn text-secondary col py-2" type="submit">Sign Up</button>
             </div>
         </div>
+        <button class="btn btn-primary  btn-lg bg-success w-100 py-2" type="submit">Continue</button>
+    </form>
+
+    @if (!ViewData.ModelState.IsValid)
+    {
+        <div class="alert alert-danger" role="alert">
+            <strong>Error:</strong> There was a problem with your profile save.
+            <ul>
+                @foreach (var error in ViewData.ModelState.Values.SelectMany(v => v.Errors))
+                {
+                    <li>@error.ErrorMessage</li>
+                }
+            </ul>
+        </div>
+    }
+
+    <div class="mt-3 text-center">
+        @{
+            if (Model.ExternalLogins?.Count == 0)
+            {
+                <div>No external logins configured</div>
+            }
+            else
+            {
+                <form method="post" asp-action="ExternalLogin" asp-route-returnUrl="@Model.ReturnUrl">
+                    <div>
+                        @foreach (var provider in Model.ExternalLogins)
+                        {
+                            <button class="btn btn-secondary mx-1" type="submit" name="provider" value="@provider.Name"
+                                    title="Log in using your @provider.DisplayName account">
+
+                                <i class="bi bi-google"></i>
+                            </button>
+
+                            <a asp-controller="Account" asp-action="Register" class="btn btn-secondary mx-1">Register</a>
+                        }
+                    </div>
+                </form>
+            }
+        }
     </div>
+  
 </div>
 
 @section Scripts {
